# maigie

./: .gitignore  .gitmodules  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.json  list_models.py  maigie.code-workspace  nx.json  package-lock.json  package.json  test_sdk.py
apps/backend/: .dockerignore  .env.example  .flake8  .gitignore  CHECK_GPU.md  COURSES_MODULE_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EXCEPTION_HANDLING_GUIDE.md  GPU_SETUP.md  INSTALL_WINDOWS.md  LOGGING_AND_ERROR_TRACKING.md  QUICK_TEST_COMMANDS.md  QUICK_TEST_GUIDE.md  README.md  REGENERATE_LOCK.md  START_HERE_TESTING.md  TESTING_GUIDE_SIMPLE.md  check_mcp.py  check_models.py  cleanup_chat.py  deploy.sh  diagnose_genai.py  diagnose_os_env.py  docker-compose.gpu.yml  docker-compose.preview.yml  docker-compose.prod.yml  docker-compose.yml  install-poetry.ps1  install-windows.ps1  llm_format.patch  migrate_llm.py  project.json  pyproject.toml  setup-dev.ps1  setup-dev.sh  stop-server.ps1  test_db.py  test_logging_simple.ps1  (+8 more)
apps/backend/docs/: AUTO_BLOG_PIPELINE.md  MULTI_PROVIDER_LLM_PLAN.md
apps/backend/prisma/: cleanup-duplicates.py  schema.prisma  seed.py
apps/backend/scripts/: run_migration.py  serve.ps1  serve.sh  start-beat.ps1  start-beat.sh  start-worker.ps1  start-worker.sh
apps/backend/scripts/debug/: check_models.py  migrate_llm.py  verify_logging.py  verify_setup.py  verify_websocket.py
apps/backend/src/: config.py  dependencies.py  exceptions.py  main.py  middleware.py
apps/backend/src/core/: cache.py  celery_app.py  database.py  oauth.py  security.py  websocket.py
apps/backend/src/models/: analytics.py  auth.py  careers.py  circle_knowledge_base.py  circles.py  cms.py  courses.py  error_response.py  feedback.py  goals.py  notes.py  resource_bank.py  resources.py  schedule.py  studio_preview.py  websocket.py
apps/backend/src/proto/: __init__.py  tts.proto
apps/backend/src/routes/: admin.py  admin_career_applications.py  admin_content.py  admin_finance.py  admin_health.py  admin_llm_config.py  admin_staff.py  ads.py  ai.py  analytics.py  auth.py  blog_public.py  careers.py  chat.py  chat_greeting.py  chat_helpers.py  chat_sessions.py  chat_ws.py  circle_billing.py  circle_course_progress.py  circle_knowledge_base.py  circle_repository.py  circle_seats.py  circles.py  courses.py  courses_helpers.py  credit_packs.py  dashboard.py  device_tokens.py  documents.py  elevenlabs.py  exam_prep.py  examples.py  feedback.py  gemini_live.py  goals.py  google_play_billing.py  knowledge_base.py  mcp_oauth.py  mcp_routes.py  (+19 more)
apps/backend/src/schemas/: LICENSE  circle.py  courses.py  credit_packs.py  model_selection.py  subscription.py
apps/backend/src/services/: account_deletion_service.py  action_service.py  activity_tracker.py  ai_course.py  ai_email_service.py  audit_service.py  blog_autopilot_service.py  chat_session_service.py  chat_tool_arg_enrichment.py  circle_billing_service.py  circle_chat_service.py  circle_gates.py  circle_kb_context_service.py  circle_knowledge_base_service.py  circle_repository_service.py  circle_service.py  component_response_service.py  cost_calculator.py  course_delete_service.py  course_service.py  (+56 more)
apps/backend/tests/: LICENSE  conftest.py  test_api.py  test_app_setup.py  test_auth.py  test_chat.py  test_chat_helpers.py  test_chat_tool_arg_enrichment.py  test_circle_billing.py  test_circle_gates.py  test_circle_repository.py  test_circuit_breaker.py  test_cost_calculator.py  test_cost_tracker.py  test_courses.py  test_credit_service.py  test_end_to_end_routing.py  test_exception_handling.py  test_feature_flags.py  test_gemini_tool_handlers.py  test_llm_agentic_roundtrip.py  test_llm_chat_context.py  test_moderation_service.py  test_notes.py  test_openai_chat_tools.py  test_password_reset.py  test_seat_service.py  test_storage.py  test_stream_normalizer.py  test_subscription_catalog.py  test_tool_normalizer.py  test_usage_tracking_scope.py
apps/soprano-tts-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/soprano-tts-service/src/: __init__.py  main.py
(+253 files in other folders)
